--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,16 @@
     RewriteEngine On
     RewriteBase /NSHIS/
 
+    
+    #Redirect all view device except for cubicle and action to /NSHIS/action/[action]/[device]/[device id]
+	RedirectMatch ^.*\/((?!action|cubicle)[a-zA-Z_]{1,20})\/(view|edit)\/([0-9]{1,20})$ /NSHIS/action/$2/$1/$3
+	
+	#Redirect all add device except for cubicle and action to /NSHIS/action/add/[device]
+	RedirectMatch ^.*\/((?!action|cubicle)[a-zA-Z_]{1,20})\/add.*$ /NSHIS/action/add/$1
+	
+	#Redirect all viewall action to /NSHIS/action/viewall/[device]
+	RedirectMatch ^.*\/((?!action)[a-zA-Z_]{1,20})\/viewall.*$ /NSHIS/action/viewall/$1
+
     #Removes access to the system folder by users.
     #Additionally this will allow you to create a System.php controller,
     #previously this would not have been possible.
@@ -22,6 +32,9 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?/$1 [L]
+
+
+
 </IfModule>
 
 <IfModule !mod_rewrite.c>
